hphp/hack/test/typecheck/function_hint_with_variadic_parameter_and_non_variadic_arg.php
<?hh //strict

function non_variadic(int $a, string $y): void {}

function hint_variadic((function(mixed...): void) $f): void {}

function test(): void {
  hint_variadic(non_variadic<>);
}
